	- lua: don't link -lreadline and -lhistory (#147013).
	- add tweaks to permit building in subdir, more to do yet (#81196).
	- fix: don't process package manifest if HTML is found (#75774).
	- fix: teach GNUconfigure about configure.[ac][in] (#170961).
	- fix: insure that netsharedpath basename contains no '/' (#52725).
	- popt: handle POPT_ARGFLAG_OPTIONAL correctly (#71147).

4.4.3 -> 4.4.4:
	- start rpm-4.4.4 development.
	- re-enable libtool/pkgconfig/python/java automagic requires extractors.
	- re-enable pubkey server configuration.
	- perl: diddle Makefile.PL to build/link within rpm source tree.
	- perl: add build dependency on perl(ExtUtils::MakeMaker) >= 6.17.
	- don't build rpmgetconf by default.
	- don't enable the fcntl transaction lock by default.
	- popt R++.
	- complete forking perl-RPM2/* to perl/* module name "RPM".
	- upgrade to db-4.4.16 internal.
	- rollback: move score board into transaction elements and eliminate.
	- rollback: adjust installed package counts when rollback downgrading.
	- rollback: don't force erase rpmdb headers, rollback downgrade will do.
	- remove (broken) test programs trb.c and tgi.c.
	- add fsm vectors for cpio peculier routines.
	- make the fcntl transaction lock sensitive to --root (#151255).
	- add --noconfig and --nodoc to query/verify modes.
	- perl: install in vendor dir.
	- support for tar payloads (hardlinks still need work).
	- fix: remove faux error msg when fcntl transaction lock is disabled.
	- functional tar payload creation in *.rpm packages.
	- functional tar payload extraction from *.rpm packages.
	- automated cpio/tar payload detection installing *.rpm packages.
	- fix: mireSkip returned false positive match for non-existent tags.
	- display dependency loops with rpm -qvT.
	- popt: assume utf-8 encoding for untranslated strings (#172155).
	- release rpm-4.4.4.

4.4.2 -> 4.4.3:
	- start 4.4.3 devel.
	- put a --stats stopwatch on rpmReadPackageFile() I/O.
	- ignore %excluded files for size